[gd_scene load_steps=9 format=3 uid="uid://nuau8n4py88y"]

[ext_resource type="Script" path="res://home.gd" id="1_nt81k"]
[ext_resource type="Texture2D" uid="uid://eknw1q5yoknu" path="res://PlaceholderArt/Møbler/room_pillows.webp" id="2_3ilki"]
[ext_resource type="Texture2D" uid="uid://dfiqk3sk58mj4" path="res://PlaceholderArt/Møbler/room_plant.webp" id="3_awkx2"]
[ext_resource type="PackedScene" uid="uid://cvuofhgxo0twx" path="res://Dogs/dog.tscn" id="5_6eess"]
[ext_resource type="PackedScene" uid="uid://bt4if4tr3t2bk" path="res://UI/hud.tscn" id="5_q31hy"]
[ext_resource type="PackedScene" uid="uid://ce8oq68vjabh0" path="res://Effects/effects_layer.tscn" id="6_v8hit"]
[ext_resource type="PackedScene" uid="uid://bb0uj6at5vjmi" path="res://UI/debug_stats.tscn" id="8_1d0nl"]
[ext_resource type="PackedScene" uid="uid://7ud6e3sa7p5r" path="res://Food/foodbowl.tscn" id="8_s1el2"]

[node name="Home" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_nt81k")

[node name="RoomPillows" type="Sprite2D" parent="."]
position = Vector2(618, 422)
scale = Vector2(0.573416, 0.625419)
texture = ExtResource("2_3ilki")
offset = Vector2(-629.56, 271.818)

[node name="RoomPlant" type="Sprite2D" parent="."]
position = Vector2(438, 831)
scale = Vector2(0.667035, 0.667035)
texture = ExtResource("3_awkx2")
offset = Vector2(0, -226.375)

[node name="Dog" parent="." instance=ExtResource("5_6eess")]
position = Vector2(349, 232)

[node name="HUD" parent="." instance=ExtResource("5_q31hy")]

[node name="EffectsLayer" parent="." instance=ExtResource("6_v8hit")]

[node name="FoodBowl" parent="." instance=ExtResource("8_s1el2")]
position = Vector2(161, 783)
bowl_name = "A"

[node name="DebugStats" parent="." instance=ExtResource("8_1d0nl")]

[node name="Dog2" parent="." instance=ExtResource("5_6eess")]
position = Vector2(190, 355)

[node name="Dog3" parent="." instance=ExtResource("5_6eess")]
position = Vector2(394, 413)

[node name="Dog4" parent="." instance=ExtResource("5_6eess")]
position = Vector2(240, 491)

[node name="FoodBowl2" parent="." instance=ExtResource("8_s1el2")]
position = Vector2(318, 119)
bowl_name = "B"

[connection signal="debug_button_pressed" from="DebugStats" to="Dog" method="_on_debug_stats_debug_button_pressed"]
[connection signal="debug_button_pressed" from="DebugStats" to="Dog2" method="_on_debug_stats_debug_button_pressed"]
[connection signal="debug_button_pressed" from="DebugStats" to="Dog3" method="_on_debug_stats_debug_button_pressed"]
[connection signal="debug_button_pressed" from="DebugStats" to="Dog4" method="_on_debug_stats_debug_button_pressed"]
